[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

#[project]
# version = "0.0.1"  # Remove any existing version parameter.
#dynamic = ["version"]

[tool.setuptools_scm]
write_to = "sanpy/_version.py"
version_scheme = "post-release"
#local_scheme = "dirty-tag"
local_scheme = "no-local-version"