[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sanpy"
# version = "0.0.1"  # Remove any existing version parameter.
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
]  # Base install has no requirements

[project.optional-dependencies]
gui = [
    "h5py",
    "matplotlib",
    "mplcursors",
    "numpy>=1.20.0",
    "pandas>=2.0.0",
    "pyabf",
    "PyQt5>=5.15.0",
    "pyqtdarktheme-fork",
    "pyqtgraph",
    "qtawesome",
    "qtpy",
    "requests",
    "roifile",  # For reading Fiji ROI files
    "scikit-image",
    "scipy>=1.8.0",
    "seaborn",  # For statistical visualizations
    "statannotations",  # For statistical annotations
    "tables",
    "tifffile",
    "platformdirs",  # to put log files in a ~user folder
]

dev = [
    "flake8",
    "ipython",
    "jupyter",
    "mkdocs",
    "mkdocs-material", 
    "mkdocs-jupyter",
    "mkdocstrings",
    "mkdocstrings-python",
    "pyinstaller",
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "tornado",
    "tox"
]

test = [
    "flake8",
    "pytest",
    "pytest-cov", 
    "pytest-qt",
    "tox"
]

[project.scripts]
sanpy = "sanpy.interface.sanpy_app:main"
sanpykym = "sanpy.kym.interface.kym_file_list.tif_tree_window:main"

[tool.setuptools]
packages = ["sanpy"]

[tool.setuptools_scm]
write_to = "sanpy/_version.py"
version_scheme = "post-release"
#local_scheme = "dirty-tag"
local_scheme = "no-local-version"

[tool.ruff]
ignore = [
    "E501",  # Supress line-too-long warnings: trust black's judgement on this one.
]

[tool.pytest.ini_options]
addopts = "--ignore=napari"